# EchoDaily

./: .eslintrc.json  .gitignore  AGENTS.md  CONTRIBUTING.md  GITHUB_ISSUES.md  LICENSE  PROJECT_PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: generate-icons.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/ai/: mod.rs  provider.rs  zhipu.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs  tests.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/tts/: mod.rs  murf.rs  provider.rs  qwen.rs
src/components/: AISettings.tsx  DataSettings.tsx  Editor.tsx  Header.tsx  MoodSelector.tsx  SaveIndicator.tsx  SelectionMenu.tsx  Sidebar.tsx  TTSPlayer.tsx  TTSSettings.tsx
src/hooks/: useAutosave.ts
src/lib/: api.ts
src/store/: useAppStore.ts
src/types/: index.ts
